# ROBOTIS-THORMANG-P-MPC

./: .travis.yml  README.md
ati_ft_sensor/: CHANGELOG.rst  CMakeLists.txt  package.xml
ati_ft_sensor/include/ati_ft_sensor/: ati_force_torque_sensor.h  ati_force_torque_sensor_twe.h
ati_ft_sensor/src/: ati_force_torque_sensor_twe.cpp
motion_module_tutorial/: CHANGELOG.rst  CMakeLists.txt  package.xml
motion_module_tutorial/include/motion_module_tutorial/: motion_module_tutorial.h
motion_module_tutorial/src/motion_module_tutorial/: motion_module_tutorial.cpp
sensor_module_tutorial/: CHANGELOG.rst  CMakeLists.txt  package.xml
sensor_module_tutorial/include/sensor_module_tutorial/: sensor_module_tutorial.h
sensor_module_tutorial/src/sensor_module_tutorial/: sensor_module_tutorial.cpp
thormang3_action_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_action_module/include/thormang3_action_module/: action_file_define.h  action_module.h
thormang3_action_module/src/: action_module.cpp
thormang3_alarm_module/: CMakeLists.txt  package.xml
thormang3_alarm_module/data/: overload.yaml
thormang3_alarm_module/include/thormang3_alarm_module/: alarm_module.h  joint_overload.h
thormang3_alarm_module/src/: alarm_module.cpp  joint_overload.cpp
thormang3_balance_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_balance_control/include/thormang3_balance_control/: thormang3_balance_control.h
thormang3_balance_control/src/: thormang3_balance_control.cpp
thormang3_base_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_base_module/data/: ini_pose.yaml
thormang3_base_module/include/thormang3_base_module/: base_module.h  base_module_state.h
thormang3_base_module/src/: base_module.cpp  base_module_state.cpp
thormang3_feet_ft_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_feet_ft_module/include/thormang3_feet_ft_module/: feet_force_torque_sensor_module.h
thormang3_feet_ft_module/src/: feet_force_torque_sensor_module.cpp
thormang3_gripper_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_gripper_module/include/thormang3_gripper_module/: gripper_module.h
thormang3_gripper_module/src/: gripper_module.cpp
thormang3_head_control_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_head_control_module/include/thormang3_head_control_module/: head_control_module.h
thormang3_head_control_module/src/: head_control_module.cpp
thormang3_kinematics_dynamics/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_kinematics_dynamics/include/thormang3_kinematics_dynamics/: kinematics_dynamics.h  kinematics_dynamics_define.h  link_data.h
thormang3_manipulation_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_manipulation_module/config/: __ini_pose.yaml  _ini_pose.yaml  ik_weight.yaml  ini_pose.yaml
thormang3_manipulation_module/include/thormang3_manipulation_module/: manipulation_module.h
thormang3_manipulation_module/src/: manipulation_module.cpp
thormang3_p_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_p_manager/config/: THORMANG3_P.robot  dxl_init.yaml  ft_calibration_data.yaml  ft_data.yaml  offset.yaml
thormang3_p_manager/launch/: config_param.xml.reference  thormang3_p_manager.launch  thormang3_p_manager_gazebo.launch
thormang3_p_manager/src/: thormang3_p_manager.cpp
thormang3_p_mpc/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_tuning_module/: CMakeLists.txt  package.xml
thormang3_tuning_module/data/: offset.yaml  tune_pose.yaml
thormang3_tuning_module/include/thormang3_tuning_module/: tuning_data.h  tuning_module.h  tuning_module_state.h
thormang3_tuning_module/src/: tuning_data.cpp  tuning_module.cpp  tuning_module_state.cpp
thormang3_walking_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_walking_module/config/: balance_offset.yaml
thormang3_walking_module/include/thormang3_walking_module/: thormang3_online_walking.h  walking_module.h
thormang3_walking_module/src/: thormang3_online_walking.cpp  walking_module.cpp
