<?xml version="1.0"?>
<package format="2">
  <name>thormang3_balance_control</name>
  <version>0.2.0</version>
  <description>
    The thormang3_balance_control package
    This balance control is based on PD control.
  </description>
  <license>Apache 2.0</license>
  <author>Jay Song</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/thormang3_balance_control</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_math</depend>
  <depend>eigen</depend>
</package>
