<?xml version="1.0"?>
<package format="2">
  <name>thormang3_kinematics_dynamics</name>
  <version>0.2.0</version>
  <description>
    This package provides a kinematics and dynamics impletation for the thormang3.
    It can be used to calculate forward and inverse kinematics.
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/thormang3_kinematics_dynamics</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_math</depend>
  <depend>eigen</depend>
</package>
