<?xml version="1.0"?>
<package format="2">
  <name>thormang3_p_manager</name>
  <version>0.2.0</version>
  <description>
    This package describes robot manager to execute THORMANG3+'s motion modules.
  </description>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="sch@robotis.com">SCH</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <!-- <url type="website">http://wiki.ros.org/thormang3_p_manager</url> -->
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-P-MPC</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-P-MPC/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>robotis_controller</depend>
  <depend>thormang3_feet_ft_module</depend>
  <depend>thormang3_base_module</depend>
  <depend>thormang3_action_module</depend>
  <depend>thormang3_head_control_module</depend>
  <depend>thormang3_manipulation_module</depend>
  <depend>thormang3_walking_module</depend>
  <depend>thormang3_gripper_module</depend>
  <depend>thormang3_tuning_module</depend>
  <exec_depend>thormang3_description</exec_depend>
  <exec_depend>thormang3_imu_3dm_gx4</exec_depend>
</package>
